--- a/triangleAreaCalc/index.html
+++ b/triangleAreaCalc/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Area of triangle</title>
+    <link rel="stylesheet" href="styles.css">
     <script type="module" src="main.js"></script>
 </head>
 <body>
-    <canvas id="myCanvas" width="200" height="100" style="border:1px solid #d3d3d3;">
+    <canvas id="myCanvas">
         Your browser does not support the HTML canvas tag.</canvas>
     <p id="area"></p>
 </body>
